--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">My Cinema App</a>
+    <a class="navbar-brand" href="http://127.0.0.1:5000/">My Cinema App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -16,16 +16,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Movies</a>
+                <a class="nav-link" href="http://127.0.0.1:5000/">Movies</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Directors</a>
+                <a class="nav-link" href="http://127.0.0.1:5000/directors">Directors</a>
             </li>
         </ul>
     </div>
 </nav>
 <div class="container-fluid">
     {% block movies_table %} {% endblock %}
+    {% block directors_table %} {% endblock %}
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
