Added single movie path

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     </div>
 </nav>
 <div class="container-fluid">
+    {% block movie_page %} {% endblock %}
     {% block movies_table %} {% endblock %}
     {% block directors_table %} {% endblock %}
 </div>
