--- a/templates/movies_table.html
+++ b/templates/movies_table.html
@@ -19,7 +19,7 @@
             {% for movie in movies %}
             <tr>
                 <th scope="row">{{movie.movie_id}}</th>
-                <td>{{movie.title}}</td>
+                <td><a style="color: black;" href="http://127.0.0.1:5000/movie/{{movie.movie_id}}">{{movie.title}}</a></td>
                 <td>{{movie.year}}</td>
                 <td>{{movie.category}}</td>
                 <td>{{movie.rating}}</td>
